force-app/main/default/objects/Decoration_Price__mdt/Decoration_Price__mdt.object-meta.xml
<CustomObject>
    <label>Decoration Price</label>
    <pluralLabel>Decoration Prices</pluralLabel>
    <description>Stores decoration placement pricing information for Quick Turn Headwear Estimator</description>
</CustomObject>