force-app/main/default/objects/Decoration_Price__mdt/fields/Flat_UpCharge__c.field-meta.xml
<CustomField>
    <fullName>Flat_UpCharge__c</fullName>
    <label>Flat Up-Charge</label>
    <description>Flat per-unit cost for this decoration placement</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>