force-app/main/default/objects/Decoration_Price__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Display Label</label>
    <description>User-friendly display name for the decoration placement</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>