force-app/main/default/objects/Decoration_Price__mdt/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <description>Unique identifier for decoration placement (e.g., Center_Front, Left_Side, Right_Side)</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>